ubuntu-mono (0.0.51) UNRELEASED; urgency=low

  * debian/control:
    - Bump debhelper Build-Depends to >= 9.
    - Update style to use trailing commas at the end of dependency lists.
    - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
  * debian/compat: bump to compat level 9.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 07 Dec 2012 16:07:16 -0500

ubuntu-mono (0.0.50) raring; urgency=low

  * Add missing weather icons for sunny days (LP: #748861)

 -- Felix Lawrence <felix.lawrence@gmx.com>  Tue, 27 Nov 2012 16:01:00 +0100

ubuntu-mono (0.0.49) quantal; urgency=low

  * Revert indicator-messages icons to the precise ones (lp: #1056488)

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Oct 2012 15:44:18 +0200

ubuntu-mono (0.0.48) quantal; urgency=low

  * Improved indicator-messages icons, 
    thanks Matthieu James and Lars Uebernickel (lp: #1056488)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 02 Oct 2012 21:04:10 +0200

ubuntu-mono (0.0.47) quantal; urgency=low

  * Indicator-messages panel icons are blurry at 26px width	(LP: #1059440).
    Thanks David

 -- Didier Roche <didrocks@ubuntu.com>  Mon, 01 Oct 2012 16:47:26 +0200

ubuntu-mono (0.0.46) quantal-proposed; urgency=low

  * New ubuntuone-client-paused icons for use by the sync indicator 
    (lp: #1043379)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 25 Sep 2012 19:18:28 +0200

ubuntu-mono (0.0.45) quantal; urgency=low

  * Fix a symlink issue showing the wrong icon in indicator-power. Thanks Lars

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Sep 2012 11:07:10 +0200

ubuntu-mono (0.0.44) quantal; urgency=low

  * Add missing nm-stage03-connecting03.svg animation frames; should stop
    having a spinner appear through the network connection animation.
    (LP: #1052958) 

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 19 Sep 2012 13:16:57 -0400

ubuntu-mono (0.0.43) quantal; urgency=low

  * Rename the icons to work with latest gtk3. Thanks Charles
